<resources>
    <string name="app_name">Asclepius</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analyze</string>
    <string name="result">Analysis Results</string>
    <string name="classification_result_label">Classification Result</string>
    <string name="related_news_label">Related News</string>
    <string name="classification_history_label">Classifications History</string>
    <string name="image_selection_instruction">Select an image from the gallery to start analysis</string>
</resources>